--- a/Social.html
+++ b/Social.html
@@ -90,7 +90,7 @@ function getLocation()
                 navigator.geolocation.getCurrentPosition(function (position) {
                     var link = "https://maps.googleapis.com/maps/api/place/search/json?location=";
                     link = link + position.coords.latitude + "," + position.coords.longitude;
-                    link = link + "&radius=10000&keyword=women%27s%20shelter&key=AIzaSyBIjnEZCEPe_GP4hETPqY4of-BCq88ZFQw";
+                    link = link + "&radius=10000&keyword=events%27s%20&key=AIzaSyDLGJ8mukYWPHZ5k43NKOBp_AUuhDAVib0";
                     console.log(link);
                 });
             }
