--- a/googlemaps.html
+++ b/googlemaps.html
@@ -1,77 +1,233 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Geolocation</title>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<html lang="en">
+
+<head>
+
     <meta charset="utf-8">
-    <style>
-      html, body, #map-canvas {
-        height: 100%;
-        margin: 0;
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Welcome to TriPal</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/agency.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Map -->
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/v2.2.1/mapbox.css' rel='stylesheet' />
+
+    <iframe width='100%' height='500px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/cgaima.82f80d17/attribution,zoompan,zoomwheel,geocoder,share.html?access_token=pk.eyJ1IjoiY2dhaW1hIiwiYSI6IjFiM2E1NzQyYTU5YmVjYTBhMTgxOTI3ZDgyM2ViOGEwIn0.b2NXYMVkV72BjFDq8pMJjg'></iframe>
+
+
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+	
+	<style type="text/css">
+    ul{
         padding: 0;
-      }
+        list-style: none;
+        background: #FFA366;
+    }
+    ul li{
+        display: inline-block;
+        position: relative;
+        line-height: 21px;
+        text-align: left;
+    }
+    ul li a{
+        display: block;
+        padding: 8px 25px;
+        color: #333;
+        text-decoration: none;
+    }
+    ul li a:hover{
+        color: #fff;
+        background: #C8F4FF;
+    }
+    ul li ul.dropdown{
+        min-width: 125px; /* Set width of the dropdown */
+        background: #FFA366;
+        display: none;
+        position: absolute;
+        z-index: 999;
+        left: 0;
+    }
+    ul li:hover ul.dropdown{
+        display: block;	/* Display the dropdown */
+    }
+    ul li ul.dropdown li{
+        display: block;
+    }
 
+<!-- Map-->
+
+    body { margin:0; padding:0; }
+      #map { position:absolute; top:0; bottom:0; width:100%; }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
 
-    <script>
-// Note: This example requires that you consent to location sharing when
-// prompted by your browser. If you see a blank space instead of the map, this
-// is probably because you have denied permission for location sharing.
+    </head>
 
-var map;
 
-function initialize() {
-  var mapOptions = {
-    zoom: 6
-  };
-  map = new google.maps.Map(document.getElementById('map-canvas'),
-      mapOptions);
+    <body>
+    <style>
+    .ui-button {
+      background:#3887BE;
+      color:#FFF;
+      display:block;
+      position:absolute;
+      top:50%;left:50%;
+      width:160px;
+      margin:-20px 0 0 -80px;
+      z-index:100;
+      text-align:center;
+      padding:10px;
+      border:1px solid rgba(0,0,0,0.4);
+      border-radius:3px;
+      }
+      .ui-button:hover {
+        background:#3074a4;
+        color:#fff;
+        }
 
-  // Try HTML5 geolocation
-  if(navigator.geolocation) {
-    navigator.geolocation.getCurrentPosition(function(position) {
-      var pos = new google.maps.LatLng(position.coords.latitude,
-                                       position.coords.longitude);
+</style>
 
-      var infowindow = new google.maps.InfoWindow({
-        map: map,
-        position: pos,
-        content: 'Location found using HTML5.'
-      });
 
-      map.setCenter(pos);
-    }, function() {
-      handleNoGeolocation(true);
+<!-- Map-->
+<div id='map'></div>
+<a href='#' id='geolocate' class='ui-button'>Find me</a>
+
+
+<!-- Map-->
+<script>
+L.mapbox.accessToken = 'pk.eyJ1IjoiY2dhaW1hIiwiYSI6IjFiM2E1NzQyYTU5YmVjYTBhMTgxOTI3ZDgyM2ViOGEwIn0.b2NXYMVkV72BjFDq8pMJjg';
+var geolocate = document.getElementById('geolocate');
+var map = L.mapbox.map('map', 'mapbox.streets');
+var myLayer = L.mapbox.featureLayer().addTo(map);
+// This uses the HTML5 geolocation API, which is available on
+// most mobile browsers and modern browsers, but not in Internet Explorer
+//
+// See this chart of compatibility for details:
+// http://caniuse.com/#feat=geolocation
+if (!navigator.geolocation) {
+    geolocate.innerHTML = 'Geolocation is not available';
+} else {
+    geolocate.onclick = function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        map.locate();
+    };
+}
+// Once we've got a position, zoom and center the map
+// on it, and add a single marker.
+map.on('locationfound', function(e) {
+    map.fitBounds(e.bounds);
+    myLayer.setGeoJSON({
+        type: 'Feature',
+        geometry: {
+            type: 'Point',
+            coordinates: [e.latlng.lng, e.latlng.lat]
+        },
+        properties: {
+            'title': 'Here I am!',
+            'marker-color': '#ff8888',
+            'marker-symbol': 'star'
+        }
     });
-  } else {
-    // Browser doesn't support Geolocation
-    handleNoGeolocation(false);
-  }
-}
+    // And hide the geolocation button
+    geolocate.parentNode.removeChild(geolocate);
+});
+// If the user chooses not to allow their location
+// to be shared, display an error message.
+map.on('locationerror', function() {
+    geolocate.innerHTML = 'Position could not be found';
+});
+</script>
+<!-- End Map Script-->
 
-function handleNoGeolocation(errorFlag) {
-  if (errorFlag) {
-    var content = 'Error: The Geolocation service failed.';
-  } else {
-    var content = 'Error: Your browser doesn\'t support geolocation.';
-  }
 
-  var options = {
-    map: map,
-    position: new google.maps.LatLng(60, 105),
-    content: content
-  };
 
-  var infowindow = new google.maps.InfoWindow(options);
-  map.setCenter(options.position);
-}
+<body id="page-top" class="index">
 
-google.maps.event.addDomListener(window, 'load', initialize);
+    <!-- Navigation -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" style="color:#CC3300" href="#page-top">TriPal</a>
+            </div>
 
-    </script>
-  </head>
-  <body>
-    <div id="map-canvas"></div>
-  </body>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#Home">Home</a>
+						<ul class ="dropdown">
+							<li><a "class = "page-scroll" href = "#about">How It Works</a></li>
+							<li><a class = "page-scroll" href = "#team">Team</a></li>
+							<li><a class = "page-scroll" href = "#contact">Contact Us</a></li>
+						</ul>
+                    </li>
+                    <li>
+                        <a href="MyPal.html"><!-- class="page-scroll" --> <!-- href="#portfolio" -->My Pal</a>
+                    </li>
+                    <li>
+                        <a href="Physical.html"><!-- class="page-scroll" --> <!-- href="#about" -->Phsyical</a>
+                    </li>
+                    <li>
+                        <a href="Social.html"><!-- class="page-scroll" --> <!-- href="#team" -->Social</a>
+                    </li>
+                    <li>
+                        <a href="EmotionalMental.html"><!-- class="page-scroll" --> <!-- href="#contact" -->Mental/Emotional</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="intro-text"> <br><br><br><br><br><br><br><br><br>
+                <div style="color:#FF6600" class="intro-lead-in" >Hey there! Welcome to your</div>
+                <div  style="color:#FF6600" class="intro-heading">social vertex. </div>
+                <a href="#" style="color:#FF9900"  class="btn btn-xl">Take Quiz</a>
+            </div>
+        </div>
+    </header>
+
+</body>
 </html>
+
+
+   
